Fix spacing issues in right-half between employer, position and start/end date

--- a/resumeBuilder/src/App.css
+++ b/resumeBuilder/src/App.css
@@ -308,7 +308,7 @@ button:hover {
   cursor: pointer;
 }
 
-#userInfo {
+#userInfo, #employerMonths {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
